@@ -1,10 +1,14 @@
-2014-11-24  Charlie Zender  <zender@uci.edu>
+2014-11-25  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.4.7 release procedure:
  	Changes since nco-4_4_6: -0->-1, rename bug, cnk xst, cnk_min, -X,
 	cd ~/nco;cvs tag -d nco-4_4_7;cvs tag -d nco-4_4_7-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.4.7 release"
 	cvs tag -c nco-4_4_7;cvs tag -c nco-4_4_7-1
+
+	* Initialize input chunksize defaults correctly for ncwa, ncecat, ncpdq
+
+2014-11-24  Charlie Zender  <zender@uci.edu>
 
 	* Replace strncpy() in sng_trm_trl_zro() with explicit loop toprevent valgrind complaining about,
 	and Mac OS X crashing on, overlapping source and destination buffers
